--- a/frontend/src/app/shared/component/checkboxes/checkboxes.component.html
+++ b/frontend/src/app/shared/component/checkboxes/checkboxes.component.html
@@ -2,12 +2,18 @@
     <div class="grid">
         <div class="cell"><label for="menu-label">{{label}}</label></div>
         <div class="flex-container">
-            <div class="checkboxes  cell" *ngFor="let item of items" >
-                <label class="checkbox">
-                  <input type="checkbox" [value]="item" [checked]="currentItem.includes(item)" [name]="groupName" (change)="changeItem(item)" />
-                   {{ item}}
-                </label>
-            </div>
+            <ng-container *ngIf="items.length > 0">
+                <div class="checkboxes  cell" *ngFor="let item of items" >
+                    <label class="checkbox">
+                      <input type="checkbox" [value]="item" [checked]="currentItem.includes(item)" [name]="groupName" (change)="changeItem(item)" />
+                       {{ item}}
+                    </label>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="items.length === 0">
+                <div class="cell">NO DATA AVAILABLE</div>
+            </ng-container>
+            
         </div>    
         
     </div>
