--- a/frontend/src/app/features/components/financials/financials.component.html
+++ b/frontend/src/app/features/components/financials/financials.component.html
@@ -1,7 +1,7 @@
 <div class="fixed-grid has-5-cols">
   <div class="grid">
     <div class="notification has-text-centered cell is-col-span-5">
-      <h1 class="title is-align-self-center">Dashboard Histogram</h1>
+      <h1 class="title is-align-self-center">Companies Financials</h1>
     </div>
     <div class="cell is-row-span-3">
       <app-radio
