--- a/frontend/src/app/features/components/news/news.component.scss
+++ b/frontend/src/app/features/components/news/news.component.scss
@@ -2,9 +2,9 @@
   margin-left: 1rem;
 }
 
-.no-underline {
-  text-decoration: none;
-}
+// a.no-underline {
+//   text-decoration: none;
+// }
 
 .image-frame {
     width: 140px;
