--- a/frontend/src/app/features/components/overview/overview.component.html
+++ b/frontend/src/app/features/components/overview/overview.component.html
@@ -1,2 +1,12 @@
-
-    <app-news [showAdditionalSection]="false"></app-news>
+<div class="fixed-frid has-4-cols has-4-">
+  <div class="grid">
+    <div class="cell is-col-span-3">
+      <app-news [showAdditionalSection]="false" [titleSizeMain]="'is-6'" [subtitleSizeMain]="'is-7'" [titleSizeSubMain]="'is-6'" [subtitleSizeSubMain]="'is-7'"></app-news>
+    </div>
+    <div class="cell is-col-span-1"> <div class="notification">
+        <h1>Top Gainers</h1>
+    </div></div>
+    <div class="cell is-row-start-2 is-col-span-2"> <div class="notification"></div></div>
+    <div class="cell is-row-start-2 is-col-span-2"><div class="notification"></div></div>
+  </div>
+</div>
