--- a/frontend/src/app/features/components/overview/overview.component.html
+++ b/frontend/src/app/features/components/overview/overview.component.html
@@ -1,68 +1,363 @@
-<div class="fixed-frid has-4-cols has-4-">
-  <div class="grid">
-    <div class="cell is-col-span-3">
-      <app-news
-        [showAdditionalSection]="false"
-        [titleSizeMain]="'is-6'"
-        [subtitleSizeMain]="'is-7'"
-        [titleSizeSubMain]="'is-6'"
-        [subtitleSizeSubMain]="'is-7'"
-      ></app-news>
-    </div>
-    <div class="cell is-col-span-1">
-      <div class="notification">
-        <h1 class="subtitle is-6">Top Gainers</h1>
-        <!-- <hr class="new1" /> -->
-        <div class="columns is-multiline">
-          <div class="column is-half" *ngFor="let item of topGainers">
-            <div class="container" style="border-left: 2px solid var(--monkey-primary-01); padding-left: 1rem;">
+<!-- <div class="fixed-frid has-4-cols has-4-"> -->
+<div class="grid is-col-min-4 is-row-min-4">
+  <div class="cell is-col-span-3">
+    <app-news
+      [showAdditionalSection]="false"
+      [titleSizeMain]="'is-6'"
+      [subtitleSizeMain]="'is-7'"
+      [titleSizeSubMain]="'is-6'"
+      [subtitleSizeSubMain]="'is-7'"
+    ></app-news>
+  </div>
 
+  <div class="cell is-col-span-1 is-row-start-1 is-col-start-4 is-row-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Gainers</h1>
+      <!-- <hr class="new1" /> -->
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of topGainers">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
             <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
             <div class="is-flex is-justify-content-space-between">
               <p class="is-size-7 has-text-success">
                 <i class="fas fa-caret-up"></i> {{ item.percentChange }}%
               </p>
-              <p class="is-size-7">Rp{{ item.price }}</p>
-            </div>
+              <p class="is-size-7 has-text-warning">Rp{{ item.price }}</p>
             </div>
           </div>
         </div>
+      </div>
 
-        <!-- <div class="cell is-col-span-1"> -->
-        <!-- <div class="notification"> -->
-          <hr class="new1" />
+      <hr class="new1" />
 
-          <h1 class="subtitle is-6">Top Losers</h1>
-
-          <div class="columns is-multiline">
-            <div class="column is-half" *ngFor="let item of topLosers">
-              <div class="container" style="border-left: 2px solid var(--monkey-primary-01); padding-left: 1rem;">
-                <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
-                <div class="is-flex is-justify-content-space-between">
-                  <p class="is-size-7 has-text-danger">
-                    <i class="fas fa-caret-down"></i>
-                    {{ item.percentChange }}%
-                  </p>
-                  <p class="is-size-7">Rp{{ item.price }}</p>
-                </div>
-              </div>
+      <h1 class="subtitle is-6">Top Losers</h1>
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of topLosers">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-danger">
+                <i class="fas fa-caret-down"></i> {{ item.percentChange }}%
+              </p>
+              <p class="is-size-7 has-text-warning">Rp{{ item.price }}</p>
             </div>
           </div>
-        <!-- </div> -->
-
-        <!-- </div> -->
-      </div>
-      <div class="cell is-row-start-2 is-col-span-2">
-        <div class="notification"></div>
-      </div>
-      <div class="cell is-row-start-2 is-col-span-2">
-        <div class="notification"></div>
-      </div>
-      <div class="cell is-row-start-3 is-col-span-2" *ngIf="latestPrice">
-        <div class="notification">
-          Latest Price: {{ latestPrice.latestPrice }}
         </div>
       </div>
     </div>
   </div>
+
+  <!-- <hr class="new1" /> -->
+
+  <div class="cell is-col-span-1 is-col-start-4 is-row-start-3 is-row-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Weekly Gainers</h1>
+      <!-- <hr class="new1" /> -->
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of weeklyGainers">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-success">
+                <i class="fas fa-caret-up"></i> {{ item.percentChange }}%
+              </p>
+              <p class="is-size-7 has-text-warning">Rp{{ item.price }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr class="new1" />
+
+      <h1 class="subtitle is-6">Weekly Losers</h1>
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of weeklyLosers">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-danger">
+                <i class="fas fa-caret-down"></i> {{ item.percentChange }}%
+              </p>
+              <p class="is-size-7 has-text-warning">Rp{{ item.price }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <hr class="new1" /> -->
+  <div class="cell is-col-span-1 is-col-start-4 is-row-start-5 is-row-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Monthly Gainers</h1>
+      <!-- <hr class="new1" /> -->
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of monthlyGainers">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-success">
+                <i class="fas fa-caret-up"></i> {{ item.percentChange }}%
+              </p>
+              <p class="is-size-7 has-text-warning">Rp{{ item.price }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr class="new1" />
+
+      <h1 class="subtitle is-6">Monthly Losers</h1>
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of monthlyLosers">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-danger">
+                <i class="fas fa-caret-down"></i> {{ item.percentChange }}%
+              </p>
+              <p class="is-size-7 has-text-warning">Rp{{ item.price }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="cell is-row-start-2 is-col-span-1">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Dividend Rate</h1>
+
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of topDividendRate">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                Rp{{ item.dividendRate }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <hr class="new1" /> -->
+  <div class="cell is-row-start-3 is-col-span-1">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Dividend Yield</h1>
+
+      <div class="columns is-multiline">
+        <div class="column is-half" *ngFor="let item of topDividendYield">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                {{ item.dividendYield | percent : "1.0-2" }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="cell is-row-start-2 is-col-start-2 is-col-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Market Caps</h1>
+      <div class="columns is-multiline">
+        <div class="column is-one-third" *ngFor="let item of topMarketCaps">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                {{ item.marketCap | currency : "Rp" }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <hr class="new1" /> -->
+
+  <div class="cell is-row-start-3 is-col-start-2 is-col-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Last Day Volume</h1>
+      <div class="columns is-multiline">
+        <div class="column is-one-third" *ngFor="let item of topVolumes">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                {{ item.lastDayVolume | number }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <hr class="new1" /> -->
+
+  <div class="cell is-row-start-4 is-col-start-2 is-col-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Return On Equity</h1>
+      <div class="columns is-multiline">
+        <div class="column is-one-quarter" *ngFor="let item of topROE">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                {{ item.returnOnEquity | number }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <hr class="new1" /> -->
+
+  <div class="cell is-row-start-5 is-col-start-2 is-col-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Earning per Share</h1>
+      <div class="columns is-multiline">
+        <div class="column is-one-quarter" *ngFor="let item of topEPS">
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                {{ item.trailingEps | number }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <hr class="new1" /> -->
+
+  <div class="cell is-row-start-6 is-col-start-2 is-col-span-2">
+    <div class="notification">
+      <h1 class="subtitle is-6">Top Earnings Growth</h1>
+      <div class="columns is-multiline">
+        <div
+          class="column is-one-quarter"
+          *ngFor="let item of topEarningsGrowth"
+        >
+          <div
+            class="container"
+            style="
+              border-left: 2px solid var(--monkey-primary-01);
+              padding-left: 1rem;
+            "
+          >
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+            </div>
+            <div class="is-flex is-justify-content-space-between">
+              <p class="is-size-7 has-text-warning">
+                {{ item.earningsGrowth | number }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="cell is-row-start-3 is-col-span-2" *ngIf="latestPrice">
+        <div class="notification">
+          Latest Price: {{ latestPrice.latestPrice }}
+        </div>
+      </div> -->
 </div>
+<!-- </div> -->
