feat: overview -> done

--- a/frontend/src/app/features/components/news/news.component.html
+++ b/frontend/src/app/features/components/news/news.component.html
@@ -1,3 +1,8 @@
+<ng-container *ngIf="showAdditionalSection">
+<div class="notification has-text-centered cell is-col-span-5">
+  <h1 class="title is-align-self-center">News</h1>
+</div>
+</ng-container>
 <div class="fixed-grid notification has-5-cols">
   <div class="grid column is-column-gap-4">
     <div class="cell is-col-span-3 is-row-span-5">
