feat: stock-page -> on progress

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <router-outlet />
+<!-- <app-loading-indicator /> -->
+
 <div class='toggle-switch' >
     <label>
         <input placeholder="theme"  type='checkbox' [(ngModel)]="isLight" (click)="themeToggleMode()" ngDefaultControl  >
