--- a/frontend/src/app/core/layout/navbar/navbar.component.html
+++ b/frontend/src/app/core/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a title="navbar-item" class="navbar-item" href="https://bulma.io">
+    <a title="navbar-item" class="navbar-item" routerLink="/">
       <svg
         height="160"
         xmlns="http://www.w3.org/2000/svg"
