--- a/frontend/src/app/features/components/stock-info/stock-info/stock-info.component.html
+++ b/frontend/src/app/features/components/stock-info/stock-info/stock-info.component.html
@@ -68,7 +68,7 @@
                   <br />
                   <span
                     class="tag is-normal is-7"
-                    [ngClass]="setColorListingBoard(item.listing_board)"
+                    [ngClass]="lbs.setColorListingBoard(item.listing_board)"
                     >{{ item.listing_board }}</span
                   >
                   <br />
