--- a/frontend/src/app/features/components/stock-page/stock-page.component.scss
+++ b/frontend/src/app/features/components/stock-page/stock-page.component.scss
@@ -16,4 +16,36 @@
   .flex-item {
     /* Any specific styles for flex items */
   }
+
+  .table {
+    background-color: transparent;
+  }
   
+  .tooltip {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Position the tooltip above the text */
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
