--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -173,4 +173,14 @@ hr.new1 {
 //         /* CSS to Reset */
 //     }
 // }
-  
+
+.left-border{
+  border-left: 2px solid var(--monkey-primary-01);
+  padding-left: 1rem;
+}
+
+// .top-border{
+//   border-top: 1px solid var(--monkey-primary-01);
+//   padding-left: 1rem;
+// }
+
